Keep the screen always active. Fix the display bug.

--- a/Bluetooth4_3/res/layout/gatt_services_characteristics.xml
+++ b/Bluetooth4_3/res/layout/gatt_services_characteristics.xml
@@ -42,6 +42,13 @@
 
 
     </LinearLayout>
+    
+        <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal" >
+        
       <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,12 +61,13 @@
             android:layout_height="wrap_content"
             android:text="@string/no_data"
             android:textSize="30sp" />
- 
+  </LinearLayout>
+        
     <SurfaceView
         android:id="@+id/surfaceView01"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="133.86" />
+        android:layout_weight="112.66" />
 
 
     
